2007-10-27  Nicolas François  <nicolas.francois@centraliens.net>

	* man/gpasswd.1.xml: Describe the options separately in the
	OPTIONS section. Simplify the synopsis.

2007-10-27  Nicolas François  <nicolas.francois@centraliens.net>

	* README, po/Makevars: Update contact information.

2007-10-27  Christian Perrier  <bubulle@debian.org

	* src/newgrp.c,	src/passwd.c, src/su.c:
	No longer 'apologize' to users when they use incorrect passwords
	Remove "Sorry" from programs display
	Imported from Debian's patch 413_no-sorry-in-passwd and
	102_de-fix-sorry
	* man/fr/fr.po: fix translation errors. Imported from Debian's
	patch 201_fix_man_su_fr and 416_man-fr_newgrp
	* man/it/it.po, man/Makefile.am, man/it/Makefile.am:
	Use gettext for the Italian man pages translation. Imported from
	Debian's patch 202_it_man_uses_gettext. Thanks to Giuseppe
	Sacco who contributed the Italian translation.
	* man/de/de.po: (nearly) complete German translation of man pages
	Imported from Debian's patch 203_de-man-update. Thanks to 
	Simon Brandmair
	* src/usermod.c: Clarify the online help of usermod for "-a"
	Imported from Debian's patch 402-clarify_usermod_usage
	* man/shadow.5.xml: fix spelling error. Imported from Debian's
	patch 433_shadow.5-typo_312430
	* src/su.c: Be up front on the origin of su and mention the GNU
	origin. Imported from Debian's patch 438_su_GNU_origin

2007-10-27  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, po/zh_CN.po: Updated Chinese translation. Imported from
	Debian's patch 105_zh_CN. Thanks to Ming Hua for the update.

2007-10-13  Tommi Vainikainen  <thv+debian@iki.fi>

	* NEWS, po/fi.po: Updated Finish translation (400t).

2007-10-13  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/su.c: If compiled without PAM support, enforce the
	limits from /etc/limits when one of the -, -l, or --login options
	is set, even if called by root. Thanks to Justin Bronder.
